objects/SBQQ__PriceAction__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Markup (%)</fullName>
                </value>
                <value>
                    <fullName>Markup (Amt)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Formula__c</fullName>
        <description>You can construct a formula using many of Salesforce's available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <description>Number which determines the order in which multiple actions on a rule are executed.</description>
        <inlineHelpText>Number which determines the order in which multiple actions on a rule are executed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleLookupObject__c</fullName>
        <formula>TEXT(SBQQ__Rule__r.SBQQ__LookupObject__c)</formula>
        <label>Rule Lookup Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Calculator') || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Quote Line')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Price rule running this action.</description>
        <inlineHelpText>Price rule running this action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Actions</relationshipLabel>
        <relationshipName>PriceActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__SourceLookupField__c</fullName>
        <description>API Name of the field to return from the row matching the condition.</description>
        <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
        <label>Source Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Value__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SourceVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that sources value for this action.</description>
        <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
        <label>Source Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Actions (Source)</relationshipLabel>
        <relationshipName>SourcePriceActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <inlineHelpText>Use Quote or Quote Line where Price Rule Evaluation Scope = Calculation, Use Product Option where Price Rule Evaluation Scope = Configuration</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>Name of the field that sources value for this action.</description>
        <inlineHelpText>If the value you want inserted is calculated in another Quote Line field, select the field here.</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>The value that will be inserted into the Target Field when conditions are met.</description>
        <inlineHelpText>Enter the value you want inserted into the Target Field when conditions are met.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customHelpPage>SBQQ__PriceActionHelp</customHelpPage>
    <description>Action that takes place when the parent price rule fires.</description>
    <label>Price Action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Event_Evaluation_Pricing_Guidance</fullName>
        <active>true</active>
        <description>Prevents users from creating Price Actions related to Pricing Guidance if the evaluation event is not After Calculate.</description>
        <errorConditionFormula>ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line Pricing Guidance') &amp;&amp; (INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'On Initialization') || INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'Before Calculate') || INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'On Calculate'))</errorConditionFormula>
        <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
        <errorMessage>To use Quote Line Pricing Guidance as the Target Object, select After Calculate from the Calculator Evaluation Event dropdown list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Target_Object_Validation</fullName>
        <active>true</active>
        <description>Prevents users from creating Price Actions targeting an out-of-scope object.</description>
        <errorConditionFormula>(ISPICKVAL(SBQQ__TargetObject__c, 'Product Option') &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Product Option') || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Configurator'))) || ((ISPICKVAL(SBQQ__TargetObject__c, 'Quote') || ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line') || ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line Pricing Guidance')) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Quote Line') || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Calculator')))</errorConditionFormula>
        <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
        <errorMessage>Price Action Target Object does not match Evaluation Scope</errorMessage>
    </validationRules>
</CustomObject>